login창 수정했습니다.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="gray">#EFEFEF</color>
     <color name="navy">#313866</color>
     <color name="pink">#FE7BE5</color>
+    <color name="blue">#0E25A1</color>
+
 </resources>
