--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -49,7 +49,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_sub"
-        android:layout_marginTop="120sp"
+        android:layout_marginTop="110sp"
         android:gravity="left"
         android:background="@drawable/edittext_custom"
         android:id="@+id/layout1"
@@ -121,7 +121,7 @@
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/login_button"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="15sp"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -152,35 +152,68 @@
             />
     </LinearLayout>
 
-    <View
-        android:id="@+id/view1"
-        android:background="@color/navy"
-        android:layout_width="120dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="21sp"
-        app:layout_constraintTop_toBottomOf="@id/layout3"
-        app:layout_constraintRight_toLeftOf="@+id/text"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layout4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        app:layout_constraintLeft_toRightOf="@+id/view1"
-        app:layout_constraintRight_toLeftOf="@id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/layout3"
-        android:text=" SNS 로그 "
-        android:layout_marginTop="10sp" />
-
-    <View
-        android:id="@+id/view2"
-        android:background="@color/navy"
-        android:layout_width="120dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="21sp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/layout3"
-        app:layout_constraintLeft_toRightOf="@id/text"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_marginTop="25sp">
+
+        <View
+            android:id="@+id/view1"
+            android:background="@color/navy"
+            android:layout_width="120dp"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toBottomOf="@id/layout3"
+            app:layout_constraintRight_toLeftOf="@+id/text"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintLeft_toRightOf="@+id/view1"
+            app:layout_constraintRight_toLeftOf="@id/view2"
+            app:layout_constraintTop_toBottomOf="@+id/layout3"
+            android:text="   SNS 로그인   " />
+
+        <View
+            android:id="@+id/view2"
+            android:background="@color/navy"
+            android:layout_width="120dp"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toBottomOf="@id/layout3"
+            app:layout_constraintLeft_toRightOf="@id/text"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/layout4"
+        android:layout_marginTop="25sp"
+        >
+        <ImageButton
+            android:id="@+id/kakao_Login"
+            android:layout_width="54sp"
+            android:layout_height="54sp"
+            android:background="@drawable/kakaologo"
+            android:layout_marginRight="50sp"/>
+        <ImageButton
+            android:id="@+id/naver_Login"
+            android:layout_width="54sp"
+            android:layout_height="54sp"
+            android:background="@drawable/naverlogo" />
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
