--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:hint="아이디 입력"
             android:layout_marginLeft="10sp"
-            android:background="null"
+            android:background="@null"
             android:layout_gravity="center"
             />
     </LinearLayout>
@@ -77,7 +77,7 @@
         android:id="@+id/layout2"
         >
         <EditText
-            android:background="null"
+            android:background="@null"
             android:id="@+id/loginPw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
