--- a/app/src/main/res/layout/login_findpw.xml
+++ b/app/src/main/res/layout/login_findpw.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -21,7 +20,7 @@
         android:fontFamily="@font/font_signiture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="아이디 찾기 "
+        android:text="비밀번호 찾기 "
         android:layout_marginTop="20sp"
         android:layout_marginLeft="10sp"
         android:textSize="32sp"
@@ -34,7 +33,7 @@
 
     <LinearLayout
         android:id="@+id/layout1"
-        android:layout_width="300sp"
+        android:layout_width="100sp"
         android:layout_height="40sp"
         android:gravity="center"
         android:layout_marginTop="70sp"
@@ -42,19 +41,64 @@
         app:layout_constraintTop_toBottomOf="@+id/imglogo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/layout2"
+        android:layout_marginRight="200sp"
+        >
+
+        <EditText
+            android:id="@+id/name_edit"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="null"
+            android:hint="  이름   "
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout2"
+        android:layout_width="300sp"
+        android:layout_height="40sp"
+        android:gravity="center"
+        android:layout_marginTop="20sp"
+        android:background="@drawable/edittext_custom"
+        app:layout_constraintTop_toBottomOf="@+id/layout1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         >
 
 
         <EditText
-            android:id="@+id/phone_edit"
-            android:layout_width="300sp"
+            android:id="@+id/id_edit"
+            android:layout_width="match_parent"
             android:layout_height="40sp"
-            android:hint="  전화번호를 입력해 주세요."
-            android:background="null"
             android:layout_gravity="center"
+            android:background="null"
+            android:hint="  아이디 입력  "
             />
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/layout3"
+        android:layout_width="300sp"
+        android:layout_height="40sp"
+        android:gravity="center"
+        android:layout_marginTop="20sp"
+        android:background="@drawable/edittext_custom"
+        app:layout_constraintTop_toBottomOf="@+id/layout2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
+        <EditText
+            android:id="@+id/phone_edit"
+            android:layout_width="match_parent"
+            android:layout_height="40sp"
+            android:layout_gravity="center"
+            android:background="null"
+            android:hint="  전화번호 입력  "
+            />
     </LinearLayout>
 
     <Button
@@ -65,7 +109,7 @@
         android:text="인증번호 받기"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout1"
+        app:layout_constraintTop_toBottomOf="@id/layout3"
         android:layout_marginTop="20sp"
         android:layout_marginLeft="150sp"
         android:background="@drawable/loginbutton_custom"
@@ -74,7 +118,7 @@
         />
 
     <LinearLayout
-        android:id="@+id/layout2"
+        android:id="@+id/layout4"
         android:layout_width="300sp"
         android:layout_height="40sp"
         android:gravity="center"
@@ -105,7 +149,7 @@
         android:text="인증번호 인증"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout2"
+        app:layout_constraintTop_toBottomOf="@id/layout4"
         android:layout_marginTop="20sp"
         android:layout_marginLeft="150sp"
         android:background="@drawable/loginbutton_custom"
@@ -113,31 +157,19 @@
         android:textSize="16sp"
         />
 
-    <!-- 인증 성공시 visible 하면서 아이디를 찾아주게 설계.    -->
     <TextView
         android:id="@+id/tv_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/certification_btn"
-        android:text="찾으시는 아이디는 hongs7803 입니다."
-        android:textSize="18sp"
-        android:layout_marginTop="40sp"
-        android:visibility="invisible"
-        />
-
-    <TextView
-        android:id="@+id/tv_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그인창으로 이동"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/navy"
-        app:layout_constraintTop_toBottomOf="@id/tv_1"
+        app:layout_constraintTop_toBottomOf="@id/certification_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="80sp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
