--- a/app/src/main/res/layout/login_findid.xml
+++ b/app/src/main/res/layout/login_findid.xml
@@ -50,7 +50,7 @@
             android:layout_width="300sp"
             android:layout_height="40sp"
             android:hint="  전화번호를 입력해 주세요."
-            android:background="null"
+            android:background="@null"
             android:layout_gravity="center"
             />
 
@@ -91,7 +91,7 @@
             android:layout_width="300sp"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  인증번호를 입력해 주세요." />
 
 
