--- a/app/src/main/res/layout/home_fragment_team.xml
+++ b/app/src/main/res/layout/home_fragment_team.xml
@@ -14,8 +14,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:layout_margin="24dp"
         android:backgroundTint="@color/navy"
         app:layout_constraintBottom_toBottomOf="parent"
