--- a/app/src/main/res/layout/login_findpw.xml
+++ b/app/src/main/res/layout/login_findpw.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  이름   "
             />
 
@@ -74,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  아이디 입력  "
             />
 
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  전화번호 입력  "
             />
     </LinearLayout>
@@ -135,7 +135,7 @@
             android:layout_width="300sp"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  인증번호를 입력해 주세요." />
 
 
