--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -22,7 +22,7 @@
         android:layout_width="40sp"
         android:layout_height="40sp"
         android:layout_marginTop="132dp"
-        android:background="@drawable/icon_camera"
+        android:background="@drawable/camera"
         app:layout_constraintHorizontal_bias="0.579"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
