--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -28,6 +28,22 @@
             android:src="@drawable/icon_more_neighbor" />
     </androidx.appcompat.widget.Toolbar>
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:id="@+id/golf"
+        android:text="골프"
+        android:textColor="#00ff00"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="3dp"
+        app:cornerRadius="100dp"/>
+
     <net.daum.mf.map.api.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
