--- a/app/src/main/res/layout/place_recyclerview_item.xml
+++ b/app/src/main/res/layout/place_recyclerview_item.xml
@@ -10,6 +10,8 @@
         android:id="@+id/titleText"
         android:text="장소"
         android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
         android:layout_margin="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
