--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -36,7 +36,7 @@
         android:id="@+id/golf"
         android:drawableLeft="@drawable/golf_icon"
         android:text="골프"
-        android:textColor="#00ff33"
+        android:textColor="#000000"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:backgroundTint="@color/white"
