--- a/app/src/main/res/layout/place_recyclerview_item.xml
+++ b/app/src/main/res/layout/place_recyclerview_item.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@id/addText"/>
     <View
         android:id="@+id/line"
-        android:background="@color/black"
+        android:background="#e3e3e3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="24dp"
