--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -28,7 +28,7 @@
             android:src="@drawable/icon_more_neighbor" />
     </androidx.appcompat.widget.Toolbar>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minWidth="0dp"
@@ -45,7 +45,7 @@
         android:layout_marginStart="8dp"
         app:cornerRadius="100dp"/>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minWidth="0dp"
@@ -62,7 +62,7 @@
         android:layout_marginStart="8dp"
         app:cornerRadius="100dp"/>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minWidth="0dp"
