--- a/app/src/main/res/layout/chatting_detail.xml
+++ b/app/src/main/res/layout/chatting_detail.xml
@@ -34,7 +34,7 @@
         android:cacheColorHint="#00000000"
         android:divider="#000000"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:transcriptMode="alwaysScroll"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/editText"/>
@@ -45,7 +45,8 @@
         android:inputType="textMultiLine"
         android:maxLines="4"
         android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
