마이페이지창 추가했습니다.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="navy">#313866</color>
     <color name="pink">#FE7BE5</color>
     <color name="blue">#0E25A1</color>
+    <color name="graphite">#242425</color>
 
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#ffffff</color>
