--- a/app/src/main/res/layout/mypage_match_item1.xml
+++ b/app/src/main/res/layout/mypage_match_item1.xml
@@ -8,13 +8,13 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
         android:src="@drawable/medal"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFFFFF"
-        android:layout_marginLeft="10sp"
-        android:layout_marginTop="10sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginTop="20sp"
         android:layout_marginBottom="10sp"
         android:layout_gravity="center"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,13 +25,28 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="도구리"
+        android:layout_height="0dp"
+        android:text="우리동네에서 농구 2:2로 할 사람 있나요 거1231"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        android:layout_marginTop="10sp"
+        android:textSize="15sp"
+        android:ellipsize="end"
+        android:maxLength="23"
+        android:layout_marginTop="20sp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/profile_image"
+        android:layout_marginLeft="10sp"
+        />
+
+    <TextView
+        android:id="@+id/town"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="홍운동"
+        android:textColor="@color/dark_gray"
+        android:textSize="12sp"
+        android:layout_marginTop="5sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
         app:layout_constraintLeft_toRightOf="@id/profile_image"
         android:layout_marginLeft="10sp"
         />
@@ -40,12 +55,12 @@
         android:id="@+id/upload_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="24분 전"
+        android:text="4일 전"
         android:textColor="@color/dark_gray"
         android:textSize="12sp"
         android:layout_marginTop="5sp"
         app:layout_constraintTop_toBottomOf="@id/tv_name"
-        app:layout_constraintLeft_toRightOf="@id/profile_image"
+        app:layout_constraintLeft_toRightOf="@id/town"
         android:layout_marginLeft="10sp"
         />
 
@@ -61,35 +76,38 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30sp"
-        android:ellipsize="end"
-        android:maxLines="3"
-        android:text="오늘 저녁 7시 XX스크린 골프장에서 같이 하실 있으시면 채팅 주세요~~"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:inputType="textMultiLine"
-        app:layout_constraintRight_toLeftOf="@id/more_btn"
-        app:layout_constraintLeft_toLeftOf="@id/tv_name"
-        app:layout_constraintTop_toBottomOf="@id/upload_time"
-        android:layout_gravity="start"
-        android:gravity="start"
-        android:scrollHorizontally="false"
-        android:scrollbars="vertical"
-        />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintLeft_toLeftOf="parent"
+    <ImageView
+        android:id="@+id/im_state"
+        android:layout_width="62dp"
+        android:layout_height="23dp"
+        android:background="@drawable/match_state2"
+        app:layout_constraintTop_toBottomOf="@id/town"
+        app:layout_constraintLeft_toLeftOf="@id/town"
         android:layout_marginTop="10sp"
         />
 
-<!--    TODO 서연이가 하트 작업할거임.-->
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/im_state"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="30sp"
+        />
+
+    <Button
+        android:id="@+id/review_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:text="매칭 완료하기"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line"
+        />
+
+    <!--    TODO 서연이가 하트 작업할거임.-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
