마이페이지창 추가했습니다.

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -53,6 +53,7 @@
                     android:layout_marginLeft="20sp" />
 
                 <Button
+                    android:id="@+id/profile_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
