--- a/app/src/main/res/layout/mypage_review.xml
+++ b/app/src/main/res/layout/mypage_review.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="20sp"
-                android:background="@drawable/medal" />
+                android:background="@drawable/camera" />
 
             <TextView
                 android:id="@+id/title"
