--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -22,6 +22,7 @@
         android:layout_width="40sp"
         android:layout_height="40sp"
         android:layout_marginTop="132dp"
+        android:id="@+id/camera"
         android:background="@drawable/camera"
         app:layout_constraintHorizontal_bias="0.579"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -48,7 +49,8 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:background="@null"
-            android:hint="  이름   "
+
+            android:hint="이름"
             />
 
     </LinearLayout>
@@ -65,7 +67,6 @@
         app:layout_constraintRight_toRightOf="parent"
         >
 
-
         <EditText
             android:id="@+id/id_edit"
             android:layout_width="match_parent"
@@ -73,32 +74,6 @@
             android:layout_gravity="center"
             android:background="@null"
             android:hint="  아이디 입력  "
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout3_1"
-        android:layout_width="200sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginTop="20sp"
-        android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/layout2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="101sp"
-        >
-
-
-        <EditText
-            android:id="@+id/nickname"
-            android:layout_width="match_parent"
-            android:layout_height="40sp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="  이용하실 닉네임 입력  "
             />
     </LinearLayout>
 
@@ -109,7 +84,8 @@
         android:layout_height="40sp"
         android:text="중복확인"
         android:textColor="@color/white"
-        app:layout_constraintLeft_toRightOf="@+id/layout3_1"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout2"
         android:layout_marginTop="20sp"
         android:layout_marginLeft="12sp"
@@ -163,7 +139,7 @@
     <LinearLayout
         android:id="@+id/layout3"
         android:layout_width="300sp"
-        android:layout_height="40sp"
+        android:layout_height="45sp"
         android:gravity="center"
         android:layout_marginTop="20sp"
         android:background="@drawable/edittext_custom"
@@ -174,7 +150,7 @@
         <EditText
             android:id="@+id/phone_edit"
             android:layout_width="match_parent"
-            android:layout_height="40sp"
+            android:layout_height="45sp"
             android:layout_gravity="center"
             android:background="@null"
             android:hint="  전화번호 입력  "
